// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`py#dynamodb mcp-server-connection generator > should add dynamodb dev dependency to mcp-server dev 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "name": "my-mcp-server",
  "root": "packages/my-mcp-server",
  "targets": {
    "mcp-server-dev": {
      "continuous": true,
      "dependsOn": [
        {
          "projects": [
            "db",
          ],
          "target": "dev",
        },
      ],
      "executor": "nx:run-commands",
    },
  },
}
`;

exports[`py#dynamodb mcp-server-connection generator > should use sourceComponent name when provided 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "name": "my-mcp-server",
  "root": "packages/my-mcp-server",
  "targets": {
    "custom-mcp-server-dev": {
      "continuous": true,
      "dependsOn": [
        {
          "projects": [
            "db",
          ],
          "target": "dev",
        },
      ],
      "executor": "nx:run-commands",
    },
  },
}
`;
